--- a/CroowdHost/.project
+++ b/CroowdHost/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>SIMbiosisLanding</project>
 		<project>CroowdLogin</project>
+		<project>SIMbiosisSSO</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
