--- a/CroowdHost/.project
+++ b/CroowdHost/.project
@@ -6,6 +6,7 @@
 		<project>SIMbiosisLanding</project>
 		<project>CroowdLogin</project>
 		<project>SIMbiosisSSO</project>
+		<project>CroowdResources</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
