--- a/CroowdResourceWar/.project
+++ b/CroowdResourceWar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CroowdResources</name>
+	<name>CroowdResourceWar</name>
 	<comment></comment>
 	<projects>
 	</projects>
